<resources>
    <string name="app_name">raven</string>

    <string name="registrarse">Registrarse</string>
    <string name="ver_cuenta">Ver cuenta</string>
    <string name="crear_evento_label">Crear evento</string>
    <string name="borrar_evento_label">Borrar evento</string>
    <string name="ver_evento">Ver evento</string>
    <string name="menu">Menú</string>
    <string name="calendario">Calendario</string>

    <string name="info">TU INFORMACIÓN</string>
    <string name="infoContacto">INFORMACIÓN DE CONTACTO AUXILIAR</string>
    <string name="infoEvento">INFORMACIÓN DE EVENTO</string>

    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_apellido">Apellido</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_anyo_nacimiento">Año de nacimiento</string>
    <string name="prompt_telefono">Teléfono</string>
    <string name="prompt_info_medica">Información médica</string>
    <string name="prompt_nombre_familiar">Nombre de contacto</string>
    <string name="prompt_apellido_familiar">Apellido de contacto</string>
    <string name="prompt_telefono_familiar">Teléfono de contacto</string>
    <string name="prompt_residencia">Lugar de residencia</string>
    <string name="prompt_contrasenya">Contraseña</string>
    <string name="prompt_nombre_contacto">Nombre del contacto</string>
    <string name="prompt_apellido_contacto">Apellido del contacto</string>
    <string name="prompt_telefono_contacto">Teléfono del contacto</string>

    <string name="prompt_mensaje">Mensaje</string>
    <string name="prompt_date">Fecha</string>
    <string name="prompt_time">Hora</string>

    <string name="log_out">Cerrar sesión</string>
    <string name="ver_cuenta_usuario">Ver cuenta de usuario</string>
    <string name="borrar_cuenta_usuario">Borrar cuenta de usuario</string>

    <string name="error_datos">Datos introducidos erróneamente</string>
    <string name="error_email_tlf">Email o teléfono ya utilizado</string>
    <string name="error_borrado">Error borrando evento</string>
    <string name="error_eliminado">Error borrando usuario</string>
    <string name="exito_datos">Datos introducidos correctamente</string>
    <string name="exito_actualizacion">Datos actualizados correctamente</string>
    <string name="exito_borrado">Evento borrado correctamente</string>
    <string name="exito_eliminado">Usuario borrado correctamente</string>
    <string name="exito_sesion">Bienvenido</string>

    <string name="seguir">SEGUIR</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="crear_evento">CREAR EVENTO</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrar">REGISTRARSE</string>

    <string name="contador">Contador</string>
    <string name="crear_contador">CREAR CONTADOR</string>
    <string name="titulo">Título</string>
    <string name="no_titulo">Introduzca el título</string>
    <string name="no_tiempo">Introduzca el tiempo</string>
    <string name="sonara_en">Sonará en</string>
    <string name="horas">horas</string>
    <string name="minutos">minutos</string>
    <string name="segundos">segundos</string>
    <string name="dos_puntos">:</string>
    <string name="toca_cancelar">Toca para cancelar</string>
    <string name="alarma">Alarma</string>

    <string name="last">Last</string>
    <string name="longest">Longest</string>
    <string name="start">Start</string>
    <string name="game">Game:</string>
    <string name="level">Level:</string>
    <string name="set_game">Set Game</string>
    <string name="set_level">Set Level</string>
    <string name="about">About this App</string>
    <string name="clear_longest">Clear Longest</string>
    <string-array name="level_choices">
        <item>Level 1: Remember 8</item>
        <item>Level 2: Remember 14</item>
        <item>Level 3: Remember 20</item>
        <item>Level 4: Remember 31</item>
    </string-array>
    <string-array name="game_choices">
        <item>Game 1: Single Player</item>
        <item>Game 2: Multi Player</item>
        <item>Game 3: Multi Player</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="long_about">This app was built by Bill Cattey but builds on work from many sources.\n\n
The ButtonGridView comes from a Tutorial by Ivan Memruk appearing on his blog, &quot;Mind the Robot.&quot;\n
See: &quot;Android Beatz: Making a Drum Machine App&quot;
at: http://mindtherobot.com/blog/420/android-beatz-making-a-drum-machine-app/\n\n
The button bitmaps are derived from the graphics Rich Dellinger did in photoshop for the
Simon Extreme program for the Mac.  (I cut apart the .psd image file he gave as an example.)
That work is licensed under Creative Commons Non Commercial Share Alike:
http://creativecommons.org/licenses/by-nc-sa/1.0-legalcode\n\n
I was able to achieve the extremely accurate mimic of the Simon game behavior because of the
meticulously detailed reverse engineering done by Simon Inns documented on his website at:
http://www.waitingforfriday.com/index.php/Reverse_engineering_an_MB_Electronic_Simon_game\n\n
And of course, the game itself, its design, layout, action and name are properly credited to
Milton Bradley / Hasbro which owns the game, and to the genius of Ralph Baer who conceived of
and implemented the game.  See: http://www.dieterkoenig.at/ccc/english/se_story_simon.htm\n\n
The Simon name is a registered trademark of the Milton Bradley Hasbro Corporation.\n\n
The game is covered by US Patent 4207087, issued 10 June 1980.\n
See: http://v3.espacenet.com/textdoc?DB=EPODOC&amp;IDX=US4207087\n\n
Copyright William D. Cattey\n
Some rights reserved.\n\n
This work, the source code and executable binary is licensed under the
Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License.
To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/3.0/
or send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.\n\n
Summary of terms: you may use this code for non-commercial purposes, and you may make changes, but you must
attribute the source, and you must share the source under these same terms.\n\n
</string>
    <string name="help">Help</string>
<string name="long_help">
SimonClone has 4 skill levels.\nEach level determines the length of the final sequence.\n\n
Level 1: Remember 8.\n
Level 2: Remember 14.\n
Level 3: Remember 20.\n
Level 4: Remember 31.\n\n
SimonClone has three games:\n\n
Game 1: Single Player: Repeat the sequence of colors that SimonClone gives.\n
Faithfully repeat each sequence all the way to the final one for the level and you win!\n\n
Game 2: Multi Player: SimonClone picks a color to start the game.\n
Each player in turn repeats the sequence and picks a new color to extend the sequence.\n
A player who fails to repeat the sequence is out and SimonClone starts again.\n
Last player in, wins!\n\n
Game 3: Multi Player: Each player picks a color to &quot;own&quot;.\n
Repeat the sequence given by SimonClone as in Game 1. Each player presses their owned color.\n
If you press your color at the wrong time, you are out and SimonClone starts again without your color.\n
Last player in, wins!\n\n.
</string>
</resources>
