<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".CreateAccountActivity">

    <!-- Proceso de registro -->
    <ProgressBar android:id="@+id/create_account_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/create_account_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/account_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/infoCuenta" android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info" android:gravity="center"
                    android:textSize="19dp" android:textColor="@color/colorPrimaryDark"/>

                <View android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:background="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/nombre" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_nombre"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/apellido" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_apellido"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/anyo_nacimiento" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_anyo_nacimiento"
                    android:inputType="number" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/telefono" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_telefono"
                    android:inputType="phone" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/info_medica" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_info_medica"
                    android:inputType="textMultiLine" android:maxLines="3" android:isScrollContainer="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/residencia" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_residencia"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/contrasenya" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_contrasenya"
                    android:inputType="textPassword" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/infoContacto" android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="14dp"
                    android:text="@string/infoContacto" android:gravity="center"
                    android:textSize="19dp" android:textColor="@color/colorPrimaryDark"/>

                <View android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:background="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/nombreContacto" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_nombre_contacto"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/apellidoContacto" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_apellido_contacto"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/telefonoContacto" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_telefono_contacto"
                    android:inputType="phone" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/seguir" style="?android:attr/borderlessButtonStyle"
                android:layout_width="125dp" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/seguir"
                android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="right" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
