<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="opdevelopers.raven.ContadorActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:inputType="textCapSentences"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/titulo"
        android:layout_centerHorizontal="true">

        <NumberPicker
            android:id="@+id/hourPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dos_puntos"
            android:layout_gravity="center_vertical" />

        <NumberPicker
            android:id="@+id/minPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dos_puntos"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView" />

        <NumberPicker
            android:id="@+id/secPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/boton_crear_contador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_contador"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end" />
</RelativeLayout>
