<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <!-- Proceso de registro -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/log_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"
                android:layout_marginTop="30dp" android:layout_marginBottom="20dp">

                <ImageView android:layout_width="175dp" android:layout_height="175dp"
                    android:adjustViewBounds="true" android:layout_gravity="center_horizontal"
                    android:src="@drawable/raven_logo" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/email" android:layout_width="350dp"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite" android:layout_gravity="center" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="15dp">

                <EditText android:id="@+id/contrasenya" android:layout_width="350dp"
                    android:layout_height="wrap_content" android:hint="@string/prompt_contrasenya"
                    android:inputType="textPassword" android:maxLines="1"
                    android:singleLine="true" android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite" android:layout_gravity="center" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout android:orientation="horizontal" android:layout_width="340dp"
                android:layout_height="fill_parent" android:layout_gravity="center_horizontal">

                <Button android:id="@+id/iniciar_sesion" style="?android:attr/borderlessButtonStyle"
                    android:layout_width="170dp" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/iniciar_sesion"
                    android:textStyle="bold" android:textColor="@color/colorWhite"
                    android:layout_gravity="center_horizontal" android:textAlignment="center" />

                <Button android:id="@+id/registrarse" style="?android:attr/borderlessButtonStyle"
                    android:layout_width="170dp" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/registrar"
                    android:textStyle="bold" android:textColor="@color/colorWhite"
                    android:layout_gravity="center_horizontal" android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
