<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".CreateAccountActivity">

    <!-- Proceso de crear evento -->
    <ProgressBar android:id="@+id/create_event_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/create_event_form" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout android:id="@+id/event_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/infoEvento" android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infoEvento" android:gravity="center"
                    android:textSize="19dp" android:textColor="@color/colorPrimaryDark"/>

                <View android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:background="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/mensaje" android:layout_width="330dp"
                    android:layout_height="wrap_content" android:hint="@string/prompt_mensaje"
                    android:inputType="textMultiLine" android:maxLines="3"
                    android:isScrollContainer="true" android:layout_gravity="center" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/date" android:layout_width="330dp"
                    android:layout_height="wrap_content" android:hint="@string/prompt_date"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" android:layout_gravity="center" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/time" android:layout_width="330dp"
                    android:layout_height="wrap_content" android:hint="@string/prompt_time"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" android:layout_gravity="center" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/seguir" style="?android:attr/borderlessButtonStyle"
                android:layout_width="125dp" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/seguir"
                android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="right" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lunes"
                android:id="@+id/chLunes"
                android:checked="false"
                android:onClick="onCheckboxClicked" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Martes"
                android:id="@+id/chMartes"
                android:checked="false"
                android:onClick="onCheckboxClicked" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Miercoles"
                android:id="@+id/chMiercoles"
                android:checked="false"
                android:onClick="onCheckboxClicked" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jueves"
                android:id="@+id/chJueves"
                android:checked="false"
                android:onClick="onCheckboxClicked" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Viernes"
                android:id="@+id/chViernes"
                android:checked="false"
                android:onClick="onCheckboxClicked" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sabado"
                android:id="@+id/chSabado"
                android:checked="false"
                android:onClick="onCheckboxClicked" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Domingo"
                android:id="@+id/chDomingo"
                android:checked="false"
                android:onClick="onCheckboxClicked" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
